<resources>
    <string name="app_name">Workplace Conduct</string>
    <string name="employee_number">Employee Number</string>
    <string name="login">Login</string>
    <string name="code_of_conduct">Code of Conduct</string>
    <string name="handling_administrative">Guidelines in Handling\n Administrative Cases</string>
    <string name="grievance_handling">Guidelines in\nGrievance Handling</string>
    <string name="other_policies">Other Policies</string>
    <string name="font_style_regular">fonts/MyriadPro-Regular.otf</string>
    <string name="font_style_bold">fonts/MyriadPro-Bold.otf</string>
    <string name="policy">The Policy is a statement of the basic plan of action to be pursued by the Company and by each employee in the conduct of the Company\'s affairs.</string>
    <string name="scope">The Scope describes the persons, places, objects and events to which the Rules apply. The Scope may also contain exceptions or qualifications to the Rules.</string>
    <string name="rules">The Rules describe the particular conduct expected or required of an employee, and specify regulated conduct.</string>
    <string name="rat">The Rationale states the philosophy behind the Policy and each rule of
        conduct and the fundamental reasons for the Rule.</string>
    <string name="penalties">A violation of any Rule constitutes an offense punishable by a
corresponding penalty. The corresponding penalties for each offense
are enumerated at the end of each Section.</string>
  <string name="penalties_1">Complementary policies such as the \"Dangerous Drug-Free Workplace Policy\", \"The Anti – Sexual Harassment Policy\" , \"Policy on
use of Digitized Signatures\" and \"Workplace Breastfeeding Policy\" are also found under Other Policies.</string>
        <string name="health_policy">It is the policy of the Company to promote employee wellness and
develop and produce high-quality products.\n\nThe Company believes that unless its employees are well and in good
physical and mental health, it cannot fully accomplish its business and
social objective of providing safe, quality and effective drugs for the
wellness of others.</string>
    <string name="health_rationale">Preserving health and sanitation in the workplace promotes efficiency,
productivity and continuity of service. It forms part of the Current Good
Manufacturing Practices (CGMP) that the company must observe in
order to ensure product integrity.</string>
    <string name="health_scope">These Rules shall apply to all employees, regardless of rank and
employment status.</string>
    <string name="health_rules_1">Employees shall comply with all directives related to sanitation in
the workplace and shall keep his / her work area clean and orderly
as far as practicable. An employee shall properly and safely stow
any personal belongings and effects.</string>
    <string name="health_rules_2">Employees shall not litter the workplace, smudge, smear or write on surfaces, urinate, or defecate or expectorate in unauthorized places; or otherwise violate other conditions of cleanliness and sanitation.</string>
    <string name="health_rules_3">Employees shall keep perishable items in proper workstations in
sealed containers to avoid pests and shall immediately dispose of spoiled items. he / she shall eat and drink or serve food only in
authorized areas.</string>
    <string name="health_rules_4">Employees shall as far as practicable maintain proper personal
hygiene and report to work in the prescribed company attire.</string>
<string name="health_rules_5">Employees entrusted with the handling or storage of chemical
substances and microorganisms shall take all necessary precautions
against undue exposure of himself / herself, his / her co-workers, and
guests to these substances and microorganisms, and shall always
use the protective gear prescribed by the Company.</string>
    <string name="health_rules_6">Employees entrusted with the handling of laboratory animals shall
ensure that the animals are secure in their cages or containers and
free from pest and disease. he / she shall report any animal illness
or unusual occurrence immediately to the proper Company officer.</string>
    <string name="health_rules_7">An employee who is on medication that causes side effects which
may adversely affect his / her work shall promptly advise his / her
immediate superior and his / her co-workers of such fact. Such
employee shall not operate any type of machinery or equipment or
handle chemical substances without prior written clearance from
the Company physician.</string>
    <string name="health_rules_8">An employee shall not use illegal or prohibited substances,
whether inside or outside Company premises. he / she shall not use
dangerous drugs except in compliance with a legitimate prescription
of a duly licensed physician. he / she shall comply with drug testing
requirements in accordance with government regulations and with
the Company\'s policy on drug abuse prevention (Refer to Dangerous Drug-Free Workplace Policy.).</string>
    <string name="health_rules_9">An employee shall not smoke within the Company premises except
in designated areas.</string>
    <string name="health_rules_10">An employee shall submit himself / herself to annual medical
examination within the scheduled period and when required by
management to do so, when there is reason to believe that his / her health poses danger to his / her co-employees, as well as to the
products of the company.</string>
    <string name="safety_policy_1">It is the policy of the Company to ensure that all persons, and all property
resources of the Company, are safe within its premises and are protected
from all known and foreseeable security and safety risks, losses and damages.\n\nThe degree of care and diligence required to
be observed by an employee in the performance of his / her work and in the use of Company property
depends on the nature of his / her job functions, the circumstances of his / her workplace and physical surroundings, the particular risks of
damage and injury, and the nature and value of the Company property under his / her responsibility.</string>
    <string name="safety_rationale">The physical survival and wholeness of an individual and of any Company
resource are basic requirements for efficient and continued service and
productivity.\n\n\nThese Rules are intended to promote safe working conditions and reduce, if not completely avoid, work – related accidents and the risk of physical injury, disabling injury, psychological harm and death in the workplace, and downtime caused by the impairment, destruction or loss of the tools of the trade and injury to workers.</string>
    <string name="safety_scope">These Rules apply to all employees regardless of rank or status of
employment.</string>
    <string name="safety_rules_1">An employee must comply with all directives relating to security and safety in the workplace. he / she must observe reasonable care,
diligence, prudence, and reasonable foresight for the consequence
of his / her acts in the exercise of his / her functions, in the use of the
Company property, and in his / her relations with others, with due
regard to the circumstances present in the work premises.</string>
    <string name="safety_rules_2">An employee shall not bring into Company premises pets and other
animals without the proper written authorization from the Security
and Safety Department.</string>
    <string name="safety_rules_3">Unless authorized by Management, an employee shall not bring
into Company premises and work areas any dangerous or deadly
weapons, explosives, noxious, poisonous, toxic, corrosive, oxidizing,
radioactive or flammable substance and similar items.</string>
    <string name="safety_rules_4">An employee shall not bring to the office any personal appliance(s)
(i.e.: oven toasters, personal refrigerators, TV sets, stereos) without
prior written clearance from the management.</string>
    <string name="safety_rules_5">An employee shall use, operate and handle heavy, power–driven,
fuel–driven, or flame–producing machinery, tools and equipment
cautiously and only in designated areas, with the appropriate
license or permit, if any is required, and with written Company
authorization, and following standard operating procedures.</string>
    <string name="safety_rules_6">An employee shall wear the safety attire required by government
regulations and by Company rules in designated work areas at all
times and shall, when authorized, handle chemical substances and
microorganisms only in designated areas using the appropriate
tools and equipment and following safety procedures.</string>
    <string name="safety_rules_7">An employee shall not remove, destroy, or tamper with any property or equipment in the Company premises intended for safety and
security purposes, including fire – fighting equipment, or obstruct
the area where the same are located.</string>
    <string name="safety_rules_8">An employee shall promptly report to his / her immediate superior
or the Security and Safety Department any of the following incidents
within the knowledge occurring within the Company premises and / or its immediate surroundings:\n\n</string>
    <string name="safety_rules_8_1">Accidents, poisoning, and contamination;\n</string>
    <string name="safety_rules_8_2">Robbery, theft, physical injury, extortion, blackmail,
immoral / indecent acts, abduction, and other acts of violence or other criminal acts;\n</string>
    <string name="safety_rules_8_2_1">immoral / indecent acts, abduction, and other acts of\n</string>
    <string name="safety_rules_8_2_2">violence or other criminal acts;\n</string>
    <string name="safety_rules_8_3">Physical or mental illness, and death;\n</string>
    <string name="safety_rules_8_4">Malfunctioning of equipment, faulty or exposed electric wiring, liquid and gas leaks;\n</string>
    <string name="safety_rules_8_4_1">electric wiring, liquid and gas leaks;\n</string>
    <string name="safety_rules_8_5">Explosions, fires and fire hazards; and\n</string>
    <string name="safety_rules_8_6">Unusual or unnatural sounds, noises and odors.\n</string>
    <string name="company_scope">These Rules apply to all employees regardless of rank and status
of employment. These Rules apply to all properties of the Company
including but not limited to:</string>
    <string name="company_scope_a">All types of materials and supplies;\n</string>
    <string name="company_scope_b">Finished goods;\n</string>
    <string name="company_scope_c">All types of tools and equipment, including electronic equipment such as computer hardware, cellular phones, and other devices issued by the Company for Company business purposes;\n</string>
    <string name="company_scope_d">Company issued credit cards and / or fleet card.\n</string>
    <string name="company_scope_e">Intranet and Internet facilities (the \"Network\");\n</string>
    <string name="company_scope_f">Software, digital files, systems and databases;\n</string>
    <string name="company_scope_g">Audio visual equipment;\n</string>
    <string name="company_scope_h">Company motor vehicles;\n</string>
    <string name="company_scope_i">Recreational and sports facilities and equipment;\n</string>
    <string name="company_scope_j">All types of real property, including land, building premises and structures, and all related real property rights;\n</string>
    <string name="company_scope_k">Product samples, marketing materials and literature; and\n</string>
    <string name="company_scope_l">Trademarks, copyrights, patents and other intellectual property rights.\n</string>
</resources>