<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:background="@color/blue_workplace" />

        <TextView
            android:id="@+id/scope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Scope"
            android:textColor="@color/blue_workplace"
            android:textSize="@dimen/title_text_size" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:background="@color/blue_workplace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <com.unilab.workplace.Utitlities.TextViewEx
            android:id="@+id/tv_code_sec_3_scope_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingTop="30dp"
            android:text="@string/company_scope"
            android:textColor="@color/blue_workplace"
            android:textSize="@dimen/text_size_buttons" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight=".05"
                android:gravity="right"
                android:text="a. "
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8">

            <com.unilab.workplace.Utitlities.TextViewEx
                android:id="@+id/tv_code_sec_3_scope_text_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/company_scope_a"
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight=".05"
                android:gravity="right"
                android:text="b. "
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8">

            <com.unilab.workplace.Utitlities.TextViewEx
                android:id="@+id/tv_code_sec_3_scope_text_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/company_scope_b"
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight=".05"
                android:gravity="center|right"
                android:text="c. "
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8">

            <com.unilab.workplace.Utitlities.TextViewEx
                android:id="@+id/tv_code_sec_3_scope_text_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_scope_c"
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight=".05"
                android:gravity="right"
                android:text="d. "
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8">

            <com.unilab.workplace.Utitlities.TextViewEx
                android:id="@+id/tv_code_sec_3_scope_text_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/company_scope_d"
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight=".05"
                android:gravity="center|right"
                android:text="e. "
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8">

            <com.unilab.workplace.Utitlities.TextViewEx
                android:id="@+id/tv_code_sec_3_scope_text_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/company_scope_e"
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight=".05"
                android:gravity="right"
                android:text="f. "
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8">

            <com.unilab.workplace.Utitlities.TextViewEx
                android:id="@+id/tv_code_sec_3_scope_text_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/company_scope_f"
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight=".05"
                android:gravity="right"

                android:text="g. "
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8">

            <com.unilab.workplace.Utitlities.TextViewEx
                android:id="@+id/tv_code_sec_3_scope_text_g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/company_scope_g"
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight=".05"
                android:gravity="right"
                android:text="h. "
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8">

            <com.unilab.workplace.Utitlities.TextViewEx
                android:id="@+id/tv_code_sec_3_scope_text_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/company_scope_h"
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight=".05"
                android:gravity="right"
                android:text="i. "
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8">

            <com.unilab.workplace.Utitlities.TextViewEx
                android:id="@+id/tv_code_sec_3_scope_text_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/company_scope_i"
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight=".05"
                android:gravity="right"
                android:text="j. "
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8">


            <com.unilab.workplace.Utitlities.TextViewEx
                android:id="@+id/tv_code_sec_3_scope_text_j"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/company_scope_j"
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight=".05"
                android:gravity="right"
                android:text="k. "
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".8">

            <com.unilab.workplace.Utitlities.TextViewEx
                android:id="@+id/tv_code_sec_3_scope_text_k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/company_scope_k"
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight=".05"
                android:gravity="right"
                android:text="l. "
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".9">

            <com.unilab.workplace.Utitlities.TextViewEx
                android:id="@+id/tv_code_sec_3_scope_text_l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:text="@string/company_scope_l"
                android:textColor="@color/blue_workplace"
                android:textSize="@dimen/text_size_buttons" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>
